--- a/templates/register.html
+++ b/templates/register.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register Page</title>
- <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/register.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/Home.css') }}">
 
 </head>
-<body>
+<body class="register">
     <div class="form-container">
         <h2>Register</h2>
         <form action="/register" method="post">
@@ -35,5 +35,10 @@
             <button type="submit" class="register-btn">Register</button>
         </form>
     </div>
+
+    <div class="footer-register">
+        {% include "includes/footer.html" %}
+    </div>
+
 </body>
 </html>
