modified some changes

--- a/static/css/Home.css
+++ b/static/css/Home.css
@@ -1,5 +1,5 @@
 
-.home-page{
+.home{
             height: 100%;
             margin: 0;
             padding: 0;
@@ -39,8 +39,10 @@
 
         .container {
             padding: 20px;
+            flex: 1;
             max-width: 800px;
             margin: auto;
+            display: absolute;
             text-align: justify;
         }
 
@@ -49,18 +51,30 @@
             color: #4CAF50;
         }
 
+        .container h1 {
+            text-align: center;
+            color: #4CAF50;
+        }
+
+        .container a {
+            color: green;
+            text-align: center;
+            font-size: 25px;
+            text-decoration: none;
+        }
+
+
         .container p {
             line-height: 1.6;
+            color: white;
         }
         .footer
         {
-        padding:15px;
-        background-color:#595c57;
-        font-family: Arial, sans-serif;
-        text-align:center;
-        border-radius:5px;
-        margin-top: 70px;
-        margin-bottom:0:
+        position: absolute;
+        bottom: 0;
+        width: 100%;
+        background-color: #3d5f94;
+        text-align: center;
         }
 
   /* Register page */
