--- a/templates/home.html
+++ b/templates/home.html
@@ -27,6 +27,7 @@
         <p>
             Our mission is to make books accessible to everyone, anytime, anywhere. With just a few clicks, you can explore, purchase, and enjoy books from the comfort of your home. Join our community of readers today and embark on your next literary adventure.
         </p>
+        <a href="{{ url_for('login')}}">Please click here to continue</a>
     </div>
 
     <div class="footer">
